Updated Swagger Doc
